--- a/JWTExample/Pages/Index.cshtml
+++ b/JWTExample/Pages/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@page
+﻿@page
+@model JWTExample.Pages.IndexModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
 }
 <!DOCTYPE html>
@@ -16,9 +15,9 @@
 
     <h3>Login Form</h3>
     <br /><br />
-    <div id="msg"></div>
+    <div id="msg">@Model.Message</div>
     <br /><br />
-    <form method="post" asp-page="Index">
+    <form method="post">
         <table>
             <tr>
                 <td>Username</td>
@@ -30,41 +29,11 @@
             </tr>
             <tr>
                 <td>&nbsp;</td>
-                <td><button id="login" type="button">Login</button></td>
+                <td><button id="login" asp-page-handler="Login" type="submit">Login</button></td>
             </tr>
         </table>
     </form>
 
-    <script type="text/javascript">
-$(document).ready(function() {
-    console.log("document.ready")
-    $("#login").click(function() {
-        console.log("login.click");
-        var options = {};
-    options.url = "/api/security/getToken";
-    options.type = "POST";
-    var obj = {};
-    obj.userName = $("#userName").val();
-    obj.password = $("#password").val();
-    options.data = JSON.stringify(obj);
-    options.contentType = "application/json";
-    options.dataType = "json";
-    options.success = function (token) {
-        sessionStorage.setItem("token", token);
-        $.ajaxSetup({
-            beforeSend : function (request) {
-                    request.setRequestHeader("Authorization", "Bearer " + sessionStorage.getItem("token"));
-            }
-        });
-        $("#msg").html("<h2>Sign In Success</h2>");
-    };
-    options.error = function () {
-        $("#msg").html("<h2>Sign In Error</h2>");
-    };
-    $.ajax(options);
-    });
-});
-    </script>
 </body>
 
 </html>
